--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <!---<div id="root"></div>--->
+    <header>
+      <h1>POKDEX GO</h1>
+      <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
+
+
+
+    </header>
+
+
+
+
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
