--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,17 @@
   <body>
     <!---<div id="root"></div>--->
     <header>
-      <h1>POKDEX GO</h1>
-      <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
-
-
-
+      <div class="container">
+        <div class="logo">
+          <h1>POKEDEX GO</h1>
+          <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
+       </div>
+       <div class="botones">
+          <button type="button" >Ordenar</button>
+          <button type="button" >Tipos</button>
+          <button type="button" >Rareza</button>
+        </div>
+      </div>
     </header>
 
 
