--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,30 @@
           <h1>POKEDEX GO</h1>
           <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
        </div>
-       <div class="botones">
-          <button type="button" >Ordenar</button>
-          <button type="button" >Tipos</button>
-          <button type="button" >Rareza</button>
+       <div class="filtros">
+          <div class="tipo">
+            <label for="tipo" >Tipo </label>
+            <select>
+              <option value="todos">Todos</option>
+              <option value="bug">Bug</option>
+              <option value="dark">Dark</option>
+              <option value="dragon">Dragon</option>
+              <option value="electric">Electric</option>
+              <option value="fairy">Fairy</option>
+              <option value="fighting">Fighting</option>
+              <option value="fire">Fire</option>
+              <option value="ghost">Ghost</option>
+              <option value="grass">Grass</option>
+              <option value="ground">Ground</option>
+              <option value="ice">Ice</option>
+              <option value="normal">Normal</option>
+              <option value="poison">Poison</option>
+              <option value="psychic">Psychic</option>
+              <option value="rock">Rock</option>
+              <option value="steel">Steel</option>
+              <option value="water">Water</option>
+            </select>
+          </div>
         </div>
       </div>
     </header>
