--- a/src/index.html
+++ b/src/index.html
@@ -8,36 +8,50 @@
   <body>
     <!---<div id="root"></div>--->
     <header>
+
       <div class="container">
         <div class="logo">
           <h1>POKEDEX GO</h1>
           <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
-       </div>
-       <div class="filtros">
-          <div class="tipo">
-            <label for="tipo" >Tipo </label>
-            <select>
-              <option value="todos">Todos</option>
-              <option value="bug">Bug</option>
-              <option value="dark">Dark</option>
-              <option value="dragon">Dragon</option>
-              <option value="electric">Electric</option>
-              <option value="fairy">Fairy</option>
-              <option value="fighting">Fighting</option>
-              <option value="fire">Fire</option>
-              <option value="ghost">Ghost</option>
-              <option value="grass">Grass</option>
-              <option value="ground">Ground</option>
-              <option value="ice">Ice</option>
-              <option value="normal">Normal</option>
-              <option value="poison">Poison</option>
-              <option value="psychic">Psychic</option>
-              <option value="rock">Rock</option>
-              <option value="steel">Steel</option>
-              <option value="water">Water</option>
-            </select>
-          </div>
         </div>
+
+        <div class="filtros">
+
+            <div class="dropdown">
+              <button type="button" >Ordenar</button>
+                <div class="dropdown-content">
+                  <ul class="list">
+                    <li>De mayor a menor HP</li>
+                    <li>De menor a mayor HP</li>
+                  </ul>  
+                </div>
+            </div>
+
+            <div class="tipo">
+              <label for="tipos" >Tipo </label>
+              <select id="tipos">
+                <option value="todos">Todos</option>
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
+                <option value="fairy">Fairy</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
+                <option value="ghost">Ghost</option>
+                <option value="grass">Grass</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="poison">Poison</option>
+                <option value="psychic">Psychic</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
+              </select>
+            </div>
+          </div>
+
       </div>
     </header>
 
