HU-1.1 cambios css

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         </div>
       </header>
   <main>
-  <section class="CARDSSPACE">
+  <div class="CARDSSPACE">
     <div class="pokemones-quantity">
         <p class="pokemones">Pokemones( <spam id="quantity"></spam> )</p>
     </div>
@@ -66,7 +66,7 @@
     <div class="container-btn-top">
       <img src="arrowtop.png" class="btn-top">
     </div>
-  </section>      
+  </div>      
   </main>
 
 
