cambiodescrolltop,agregados-tipo-de-pokemon-con-iconos-tomados-de-la-pag-de-pok-oficial-y-carpeta-nueva-de-imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
   
     <div class="container-modal"></div>
     <div class="container-btn-top">
-      <img src="arrowtop.png" class="btn-top">
+      <img src="imagenes/arrowtop2.png" class="btn-top">
     </div>
   </div>      
   </main>
