--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
           </div>
                     <div class="filtros">
   
-              <div class="dropdown">
-                <button type="button" >Ordenar</button>
-                  <div class="dropdown-content">
-                    <ul class="list">
-                      <li id="mayor-a-menor">De mayor a menor HP</li>
-                      <li id="menor-a-mayor" >De menor a mayor HP</li>
-                    </ul>  
-                  </div>
-              </div>
+                      <div>
+                        <label for="order-by"> Order by</label>
+                        <select id="order-by">
+                          <option value="num">Num</option>
+                          <option value="cp">CP</option>
+                          <option value="hp">HP</option>
+                          <option value="hM">hM</option>
+                        </select>
+                      </div>
   
               <div class="dropdown">
                 <button type="button" >Tipos </button>
