--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
                           <option value="hM">hM</option>
                         </select>
                       </div>
-  
+                      
+                    <div class="dropdown1">
                       <div class="dropdown-content1">
                         <div class="filtro">
                         <label   for="lista">Tipos </label>
@@ -50,6 +51,7 @@
                         </select>
                         </div>
                       </div>
+                    </div>
             </div>
             <div class="pokemones-quantity">
               <p class="pokemones">Pokemones ( <spam id="quantity"></spam> )</p>
