--- a/src/index.html
+++ b/src/index.html
@@ -14,44 +14,46 @@
             <input type="search" id="buscar" class="buscar-pokemon" placeholder="Buscar pokémon" autocomplete="off" spellcheck="false" />
           </div>
                     <div class="filtros">
-  
-                      <div>
-                        <label for="order-by"> Order by</label>
-                        <select id="order-by">
-                          <option value="num">Num</option>
-                          <option value="cp">CP</option>
-                          <option value="hp">HP</option>
-                          <option value="hM">hM</option>
-                        </select>
-                      </div>
-                      
-                    <div class="dropdown1">
-                      <div class="dropdown-content1">
-                        <div class="filtro">
-                        <label   for="lista">Tipos </label>
-                        <select class="list1" id="lista"> 
-                            <option value="todos">Todos</option>
-                            <option value="bug">Bug</option>
-                            <option value="dark">Dark</option>
-                            <option value="dragon">Dragon</option>
-                            <option value="electric">Electric</option>
-                            <option value="fairy">Fairy</option>
-                            <option value="fighting">Fighting</option>
-                            <option value="fire">Fire</option>
-                            <option value="ghost">Ghost</option>
-                            <option value="grass">Grass</option>
-                            <option value="ground">Ground</option>
-                            <option value="ice">Ice</option>
-                            <option value="normal">Normal</option>
-                            <option value="poison">Poison</option>
-                            <option value="psychic">Psychic</option>
-                            <option value="rock">Rock</option>
-                            <option value="steel">Steel</option>
-                            <option value="water">Water</option>
-                        </select>
+                      <div class="dropdown1">
+                        <div class="dropdown-content1">
+                          <div class="filtro">
+                            <label for="order-by"> Order</label>
+                            <select id="order-by" class="list1">
+                              <option value="num">Num</option>
+                              <option value="cp">CP máx-min</option>
+                              <option value="hp">HP min -máx</option>
+                              <option value="hM">HP máx-min</option>
+                            </select>
+                          </div>
                         </div>
                       </div>
-                    </div>
+                      <div class="dropdown1">
+                        <div class="dropdown-content1">
+                          <div class="filtro">
+                          <label   for="lista">Type </label>
+                          <select class="list1" id="lista"> 
+                              <option value="todos">Todos</option>
+                              <option value="bug">Bug</option>
+                              <option value="dark">Dark</option>
+                              <option value="dragon">Dragon</option>
+                              <option value="electric">Electric</option>
+                              <option value="fairy">Fairy</option>
+                              <option value="fighting">Fighting</option>
+                              <option value="fire">Fire</option>
+                              <option value="ghost">Ghost</option>
+                              <option value="grass">Grass</option>
+                              <option value="ground">Ground</option>
+                              <option value="ice">Ice</option>
+                              <option value="normal">Normal</option>
+                              <option value="poison">Poison</option>
+                              <option value="psychic">Psychic</option>
+                              <option value="rock">Rock</option>
+                              <option value="steel">Steel</option>
+                              <option value="water">Water</option>
+                          </select>
+                          </div>
+                        </div>
+                      </div>
             </div>
             <div class="pokemones-quantity">
               <p class="pokemones">Pokemones ( <spam id="quantity"></spam> )</p>
