--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                               <option value="max-cp">CP min-máx</option>
                           <!--   <option value="cpR">CP máx-min</option>--> 
                               <option value="max-hp">HP min -máx</option>
-                          <!--    <option value="hpR">HP máx-min</option>--->
+                          <!----->    <option value="hpR">HP máx-min</option>
                             </select>
                           </div>
                         </div>
