--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="pokemones-quantity">
               <p class="pokemones">Pokemones ( <spam id="quantity"></spam> )</p>
-              <p class="pokemonesp">PORCENTAJE:% ( <spam id="calculoP"></spam> )</p>
+              <p class="pokemonesp">PORCENTAJE: ( <spam id="calculoP"></spam> %)</p>
 
             </div>
         </div>
